muestra imagen y estado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name ="nombre">Rodrigo Medina Fonseca</string>
-    <string name="cuenta">416054598</string>
+    <string name="tiempo">Soleado</string>
 </resources>
